--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -1097,8 +1097,7 @@
 							<td epub:type="z3998:persona">Gardiner</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>
-										<i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">Wolsey</b>.</i> But to be commanded</span>
+									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">Wolsey</b>.</i> But to be commanded</span>
 									<br/>
 									<span>For ever by your grace, whose hand has raised me.</span>
 								</p>
