[Editorial] match text to Victoria (Act 4)

--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -153,7 +153,7 @@
 									<br/>
 									<span>Of all these learned men she was divorced,</span>
 									<br/>
-									<span>And the late marriage made of none effect</span>
+									<span>And the late marriage made of none effect:</span>
 									<br/>
 									<span>Since which she was removed to Kimbolton,</span>
 									<br/>
@@ -206,22 +206,22 @@
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">Marquess Dorset, bearing a sceptre of gold, on his head a demi-coronal of gold. With him, <b epub:type="z3998:persona">Surrey</b>, bearing the rod of silver with the dove, crowned with an earl’s coronet. Collars of SS.</i>
+											<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Marquess Dorset</b>, bearing a sceptre of gold, on his head a demi-coronal of gold. With him, the <b epub:type="z3998:persona">Earl of Surrey</b>, bearing the rod of silver with the dove, crowned with an earl’s coronet. Collars of SS.</i>
 										</p>
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Suffolk</b>, in his robe of estate, his coronet on his head, bearing a long white wand, as high-steward. With him, <b epub:type="z3998:persona">Norfolk</b>, with the rod of marshalship, a coronet on his head. Collars of SS.</i>
+											<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Duke of Suffolk</b>, in his robe of estate, his coronet on his head, bearing a long white wand, as high-steward. With him, the <b epub:type="z3998:persona">Duke of Norfolk</b>, with the rod of marshalship, a coronet on his head. Collars of SS.</i>
 										</p>
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">A canopy borne by four of the Cinque-ports; under it, <b epub:type="z3998:persona">Queen Anne</b> in her robe; in her hair richly adorned with pearl, crowned. On each side her, the Bishops of London and Winchester.</i>
+											<i epub:type="z3998:stage-direction">A canopy borne by four of the Cinque-ports; under it, the <b epub:type="z3998:persona">Queen</b> in her robe; in her hair richly adorned with pearl, crowned. On each side her, the <b epub:type="z3998:persona">Bishops of London</b> and <b epub:type="z3998:persona">Winchester</b>.</i>
 										</p>
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">The old Duchess of Norfolk, in a coronal of gold, wrought with flowers, bearing <b epub:type="z3998:persona">Queen Anne’s</b> train.</i>
+											<i epub:type="z3998:stage-direction">The old Duchess of <b epub:type="z3998:persona">Norfolk</b>, in a coronal of gold, wrought with flowers, bearing the <b epub:type="z3998:persona">Queen’s</b> train.</i>
 										</p>
 									</li>
 									<li>
@@ -281,7 +281,7 @@
 							<td epub:type="z3998:persona">Second Gentleman</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Heaven bless thee! <i epub:type="z3998:stage-direction">Looking on <b epub:type="z3998:persona">Queen Anne</b>.</i></span>
+									<span>Heaven bless thee! <i epub:type="z3998:stage-direction">Looking on the <b epub:type="z3998:persona">Queen</b>.</i></span>
 									<br/>
 									<span>Thou hast the sweetest face I ever look’d on.</span>
 									<br/>
@@ -340,7 +340,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a third <b epub:type="z3998:persona">Gentleman</b>.</i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Third Gentleman</b>.</i>
 							</td>
 						</tr>
 						<tr>
@@ -459,7 +459,7 @@
 									<br/>
 									<span>With all the choicest music of the kingdom,</span>
 									<br/>
-									<span>Together sung “Te Deum.” So she parted,</span>
+									<span>Together sung “<i xml:lang="la">Te Deum</i>.” So she parted,</span>
 									<br/>
 									<span>And with the same full state paced back again</span>
 									<br/>
@@ -618,7 +618,9 @@
 									<br/>
 									<span>Didst thou not tell me, Griffith, as thou led’st me,</span>
 									<br/>
-									<span>That the great child of honour, Cardinal Wolsey, Was dead?</span>
+									<span>That the great child of honour, Cardinal Wolsey,</span>
+									<br/>
+									<span>Was dead?</span>
 								</p>
 							</td>
 						</tr>
@@ -1036,7 +1038,7 @@
 								<p>
 									<span>Noble lady,</span>
 									<br/>
-									<span>First mine own service to your grace; the next,</span>
+									<span>First, mine own service to your grace; the next,</span>
 									<br/>
 									<span>The king’s request that I would visit you;</span>
 									<br/>
@@ -1074,7 +1076,7 @@
 								<p>
 									<span>So may he ever do! and ever flourish,</span>
 									<br/>
-									<span>When I shal l dwell with worms, and my poor name</span>
+									<span>When I shall dwell with worms, and my poor name</span>
 									<br/>
 									<span>Banish’d the kingdom! Patience, is that letter,</span>
 									<br/>
@@ -1106,7 +1108,7 @@
 								<p>
 									<span>In which I have commended to his goodness</span>
 									<br/>
-									<span>The model of our chaste loves, his young daughter;</span>
+									<span>The model of our chaste loves, his young daughter:</span>
 									<br/>
 									<span>The dews of heaven fall thick in blessings on her!</span>
 									<br/>
@@ -1128,13 +1130,13 @@
 									<br/>
 									<span>Of which there is not one, I dare avow,</span>
 									<br/>
-									<span>And now I should not lie, but will deserve</span>
+									<span>And now I should not lie, but will deserve,</span>
 									<br/>
 									<span>For virtue and true beauty of the soul,</span>
 									<br/>
 									<span>For honesty and decent carriage,</span>
 									<br/>
-									<span>A right good husband, let him be a noble</span>
+									<span>A right good husband, let him be a noble:</span>
 									<br/>
 									<span>And, sure, those men are happy that shall have ’em.</span>
 									<br/>
