[Editorial] match text to Victoria (Epilogue & Act 5)

--- a/src/epub/text/epilogue.xhtml
+++ b/src/epub/text/epilogue.xhtml
@@ -14,7 +14,7 @@
 						<td/>
 						<td epub:type="z3998:verse">
 							<p>
-								<span>’Tis ten to one this play can never please</span>
+								<span class="i1">’Tis ten to one this play can never please</span>
 								<br/>
 								<span>All that are here: some come to take their ease,</span>
 								<br/>
