Correct persona tag

--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Gardiner</b>, Bishop of Winchester, a <b epub:type="z3998:persona">Page</b> with a torch before him, met by <b epub:type="z3998:persona">Sir Thomas Lovell</b>.</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Gardiner, Bishop of Winchester</b>, a <b epub:type="z3998:persona">Page</b> with a torch before him, met by <b epub:type="z3998:persona">Sir Thomas Lovell</b>.</i>
 							</td>
 						</tr>
 						<tr>
