[Editorial] woful -> woeful

--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -619,7 +619,7 @@
 							<td epub:type="z3998:persona">First Gentleman</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>’Tis woful.</span>
+									<span>’Tis woeful.</span>
 									<br/>
 									<span>We are too open here to argue this;</span>
 									<br/>
