--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -540,7 +540,7 @@
 									<br/>
 									<span>Could but be brought to know our ends are honest,</span>
 									<br/>
-									<span>You’ld feel more comfort: why should we, good lady,</span>
+									<span>You’d feel more comfort: why should we, good lady,</span>
 									<br/>
 									<span>Upon what cause, wrong you? alas, our places,</span>
 									<br/>
