--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -1516,7 +1516,7 @@
 						<tr>
 							<td epub:type="z3998:persona">King</td>
 							<td>
-								<p>Come, come, my lord, you’ld spare your spoons: you shall have two noble partners with you; the old Duchess of Norfolk, and Lady Marquess Dorset: will these please you?</p>
+								<p>Come, come, my lord, you’d spare your spoons: you shall have two noble partners with you; the old Duchess of Norfolk, and Lady Marquess Dorset: will these please you?</p>
 								<div epub:type="z3998:verse">
 									<p>
 										<span>Once more, my Lord of Winchester, I charge you,</span>
