--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -27,7 +27,7 @@
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">The Courtship of Anne Boleyn</i>,<br/>
 			a painting completed in 1846 by<br/>
-			<a href="https://en.m.wikipedia.org/wiki/Emanuel_Leutze">Emanuel Gottlieb Leutze</a>.<br/>
+			<a href="https://en.wikipedia.org/wiki/Emanuel_Leutze">Emanuel Gottlieb Leutze</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
