--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -784,7 +784,7 @@
 									<br/>
 									<span>He was most princely: ever witness for him</span>
 									<br/>
-									<span>Those twins Of learning that he raised in you,</span>
+									<span>Those twins of learning that he raised in you,</span>
 									<br/>
 									<span>Ipswich and Oxford! one of which fell with him,</span>
 									<br/>
