--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -11,7 +11,7 @@
 				<span epub:type="label">Act</span>
 				<span epub:type="ordinal z3998:roman">I</span>
 			</h2>
-			<section id="scene-1-1" epub:type="chapter z3998:scene">
+			<section id="scene-1-1" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">I</span>
@@ -862,7 +862,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-1-2" epub:type="chapter z3998:scene">
+			<section id="scene-1-2" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">II</span>
@@ -1603,7 +1603,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-1-3" epub:type="chapter z3998:scene">
+			<section id="scene-1-3" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">III</span>
@@ -1934,7 +1934,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-1-4" epub:type="chapter z3998:scene">
+			<section id="scene-1-4" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">IV</span>
