--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -11,7 +11,7 @@
 				<span epub:type="label">Act</span>
 				<span epub:type="ordinal z3998:roman">II</span>
 			</h2>
-			<section id="scene-2-1" epub:type="chapter z3998:scene">
+			<section id="scene-2-1" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">I</span>
@@ -630,7 +630,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-2-2" epub:type="chapter z3998:scene">
+			<section id="scene-2-2" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">II</span>
@@ -1202,7 +1202,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-2-3" epub:type="chapter z3998:scene">
+			<section id="scene-2-3" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">III</span>
@@ -1629,7 +1629,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-2-4" epub:type="chapter z3998:scene">
+			<section id="scene-2-4" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">IV</span>
