--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -11,7 +11,7 @@
 				<span epub:type="label">Act</span>
 				<span epub:type="ordinal z3998:roman">IV</span>
 			</h2>
-			<section id="scene-4-1" epub:type="chapter z3998:scene">
+			<section id="scene-4-1" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">I</span>
@@ -586,7 +586,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-4-2" epub:type="chapter z3998:scene">
+			<section id="scene-4-2" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">II</span>
