--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -11,7 +11,7 @@
 				<span epub:type="label">Act</span>
 				<span epub:type="ordinal z3998:roman">V</span>
 			</h2>
-			<section id="scene-5-1" epub:type="chapter z3998:scene">
+			<section id="scene-5-1" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">I</span>
@@ -710,7 +710,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-5-2" epub:type="chapter z3998:scene">
+			<section id="scene-5-2" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">II</span>
@@ -877,7 +877,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-5-3" epub:type="chapter z3998:scene">
+			<section id="scene-5-3" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">III</span>
@@ -1571,7 +1571,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-5-4" epub:type="chapter z3998:scene">
+			<section id="scene-5-4" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">IV</span>
@@ -1769,7 +1769,7 @@
 					</tbody>
 				</table>
 			</section>
-			<section id="scene-5-5" epub:type="chapter z3998:scene">
+			<section id="scene-5-5" epub:type="z3998:scene">
 				<h3>
 					<span epub:type="label">Scene</span>
 					<span epub:type="ordinal z3998:roman">V</span>
