[Editorial] re-enter -> reenter

--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -1504,7 +1504,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter to <b epub:type="z3998:persona">Wolsey</b>, the <b epub:type="z3998:persona">Dukes of Norfolk</b> and <b epub:type="z3998:persona">Suffolk</b>, the <b epub:type="z3998:persona">Earl of Surrey</b>, and the <b epub:type="z3998:persona">Lord Chamberlain</b>.</i>
+								<i epub:type="z3998:stage-direction">Reenter to <b epub:type="z3998:persona">Wolsey</b>, the <b epub:type="z3998:persona">Dukes of Norfolk</b> and <b epub:type="z3998:persona">Suffolk</b>, the <b epub:type="z3998:persona">Earl of Surrey</b>, and the <b epub:type="z3998:persona">Lord Chamberlain</b>.</i>
 							</td>
 						</tr>
 						<tr>
