--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -390,7 +390,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Denny</b>, with <b epub:type="z3998:persona">Cranmer</b>.</i>
+								<i epub:type="z3998:stage-direction">Reenter <b epub:type="z3998:persona">Denny</b>, with <b epub:type="z3998:persona">Cranmer</b>.</i>
 							</td>
 						</tr>
 						<tr>
