--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -1080,7 +1080,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Wolsey</b>, with <b epub:type="z3998:persona">Gardiner</b>.</i>
+								<i epub:type="z3998:stage-direction">Reenter <b epub:type="z3998:persona">Wolsey</b>, with <b epub:type="z3998:persona">Gardiner</b>.</i>
 							</td>
 						</tr>
 						<tr>
