--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -999,7 +999,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">Griffith</b>, with <b epub:type="z3998:persona">Capucius</b>.</i>
+								<i epub:type="z3998:stage-direction">Reenter <b epub:type="z3998:persona">Griffith</b>, with <b epub:type="z3998:persona">Capucius</b>.</i>
 							</td>
 						</tr>
 						<tr>
